--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,6 @@
     <script src="/script.js"></script>
 </head>
 <body>
-    <h1>Hello World, it's me</h1>
+    <h1>Hello World</h1>
 </body>
 </html>
