--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Chat Program</title>
+    <title>Floer Chat Program</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
-</body>
+    <header>Floer Chat: 
+        <input type="text" placeholder="Benutzername" />
+    </header>
+    <main>
+        <div class="message">
+            <b>Patrick</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message message-me">
+            <b>Tom</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message">
+            <b>Patrick</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message message-me">
+            <b>Tom</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message">
+            <b>Patrick</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message message-me">
+            <b>Tom</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message">
+            <b>Patrick</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message message-me">
+            <b>Tom</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message">
+            <b>Patrick</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message message-me">
+            <b>Tom</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message">
+            <b>Patrick</b>
+            <p>This is a message</p>
+        </div>
+        <div class="message message-me">
+            <b>Tom</b>
+            <p>This is a message</p>
+        </div>
+    </main>
+    <div class="new-message">
+        <input type="text" placeholder="Your message" />
+        <button>Send</button>
+    </div>
+    <footer>Copyright 2023</footer>
+  </body>
 </html>
+
